--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -37,5 +37,7 @@ futures = "0.3"
 bytes = "1.0"
 clap = { version = "4.0", features = ["derive"] }
 env_logger = "0.10"
+once_cell = "1.19"
+regex = "1.11"
 
 [dev-dependencies]
